[package]
name = "intro-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
once_cell = "1.18.0"
tokio = { version = "1.28.2", features = ["rt", "macros"] }
tokio-test = "0.4.2"
